[tool.poetry]
name = "repl_python3_mangya-copy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
google-api-python-client = "^2.8.0"
google-auth-oauthlib = "^0.4.4"
pytz = "^2021.1"
yagmail = "^0.14.256"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
